--- a/_docker/nginx/templates/default.conf.template
+++ b/_docker/nginx/templates/default.conf.template
@@ -1,10 +1,14 @@
 client_max_body_size 64m;
 
+upstream appserver {
+    server app:9000;
+}
+
 server {
-  listen 8000;
+  listen 8080;
   server_name 127.0.0.1 localhost;
   index index.php index.html index.htm;
-  root /application/public;
+  root /application/public; # default Laravel's entry point for all requests
 
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
@@ -12,5 +16,15 @@ server {
   location / {
     # try to serve file directly, fallback to index.php
     try_files $uri /index.php?$args;
+  }
+
+  location ~ \.php$ {
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    fastcgi_index index.php;
+    fastcgi_pass appserver;
+    fastcgi_read_timeout 1000;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
+    include fastcgi_params;
   }
 }
