--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,24 +6,17 @@ services:
       PHP_IDE_CONFIG: "serverName=Docker"
     volumes:
       - ./:/application:cached
-    networks:
-      - tcd
-
 
   nginx:
     ports:
-      - "${APP_PORT:-8000}:8000"
+      - "${APP_PORT:-8080}:8080"
     volumes:
       - ./public:/application/public:cached
       - ./storage/app/public/:/application/public/storage/:cached
-    networks:
-      - tcd
 
   redis:
     ports:
-      - 6379:6379
-    networks:
-      - tcd
+      - 16379:6379
 
 networks:
-  tcd:
+  default:
